# iot-image-processing

./: CMakeLists.txt  Proiect IP Echipa Image.docx  README.md  openapi.json
src/: Application.cpp  Application.h  main.cpp
src/endpoints/: BiggestComponentApi.cpp  BiggestComponentApi.h  EndpointApi.cpp  EndpointApi.h  RoiApi.cpp  RoiApi.h  SurfaceApi.cpp  SurfaceApi.h  VolumeApi.cpp  VolumeApi.h
src/stateful/: Stateful.cpp  Stateful.h
src/utils/body-parser/: BodyFormParser.cpp  BodyFormParser.h  FormData.cpp  FormData.h
